--- a/payram-nextjs-testing/umbrel-app.yml
+++ b/payram-nextjs-testing/umbrel-app.yml
@@ -1,14 +1,16 @@
 manifestVersion: 1
 id: payram-nextjs-testing
 name: Payram Nextjs Testing
-tagline: Replace this tagline with your app's tagline
+tagline: Payram Nextjs Testing
 icon: https://svgur.com/i/mvA.svg
 category: Development
 version: "1.0.0"
-port: 4000
+port: 3000
 description: >-
   Add your app's description here.
-
+  This is a simple example of how to create an app store for your app.
+  You can add a description of your app here. This is a simple example of how to create an app store for your app.
+  You can add a description of your app here. This is a simple example of how to create an app store for your app.
 
   You can also add newlines!
 developer: Payram
