--- a/payram-nextjs-testing/docker-compose.yml
+++ b/payram-nextjs-testing/docker-compose.yml
@@ -1,14 +1,32 @@
 version: "3.7"
 
 services:
-
   app_proxy:
     environment:
-      # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: payram-nextjs-testing_app_server_1
-      APP_PORT: 3000
-    
-  server:
-    image: iamdsvs/umbrel-nextjs:latest
-    user: "1000:1000"
+      APP_HOST: payram-nextjs-testing_web_1
+      APP_PORT: 80
+
+  web:
+    image: buddhasource/payram-core:release-arm64
     init: true
+    restart: on-failure
+    ports:
+      - "4500:80"
+      - "8080:8080"
+      - "8443:8443"
+      - "443:443"
+      - "5432:5432"
+    environment:
+      AES_KEY: "bb5b5a930a7c58740afe0ba752b8d81ddee67f943c098b0d8904a8738e73cbd1"
+      BLOCKCHAIN_NETWORK_TYPE: "mainnet"
+      SERVER: "PRODUCTION"
+      POSTGRES_HOST: "localhost"
+      POSTGRES_PORT: "5432"
+      POSTGRES_DATABASE: "payram"
+      POSTGRES_USERNAME: "payram"
+      POSTGRES_PASSWORD: "payram123"
+    volumes:
+      - ${APP_DATA_DIR}/config:/root/payram
+      - ${APP_DATA_DIR}/logs/supervisord:/var/log
+      - ${APP_DATA_DIR}/data/postgres:/var/lib/payram/db/postgres
+      - /etc/letsencrypt:/etc/letsencrypt:ro
