--- a/sparkles-payram/docker-compose.yml
+++ b/sparkles-payram/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: payram-nextjs-testing_web_1
+      APP_HOST: sparkles-payram_web_1
       APP_PORT: 80
 
   web:
@@ -11,7 +11,7 @@ services:
     init: true
     restart: on-failure
     ports:
-      - "4500:80"
+      - "80:80"
       - "8080:8080"
       - "8443:8443"
       - "443:443"
