--- a/cryptopayments-payram/umbrel-app.yml
+++ b/cryptopayments-payram/umbrel-app.yml
@@ -24,3 +24,7 @@ gallery:
   - https://pub-dc28a97bf1d744bbb4f6b3f4a02e4459.r2.dev/payram3.jpg
 releaseNotes: >-
   Initial release
+dependencies: []
+path: ""
+defaultUsername: ""
+defaultPassword: ""
