--- a/payram-payram-server-testing/umbrel-app.yml
+++ b/payram-payram-server-testing/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: payram
+id: payram-payram-server-testing
 name: payram
 tagline: PayRam empowers high-risk businesses to accept payments with no KYC, low fees, and no third-party risks.
 icon: https://svgur.com/i/mvA.svg
