--- a/payram-payram-server-testing/docker-compose.yml
+++ b/payram-payram-server-testing/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     environment:
       APP_HOST: payram-payram-server-testing_web_1
       APP_PORT: 80
-
   web:
     image: buddhasource/payram-core:release-arm64
     init: true
@@ -19,7 +18,7 @@ services:
     environment:
       AES_KEY: "bb5b5a930a7c58740afe0ba752b8d81ddee67f943c098b0d8904a8738e73cbd1"
       BLOCKCHAIN_NETWORK_TYPE: "testnet"
-      SERVER: "PRODUCTION"
+      SERVER: "DEVELOPMENT"
       POSTGRES_HOST: "localhost"
       POSTGRES_PORT: "5432"
       POSTGRES_DATABASE: "payram"
